# CommonLit2023

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml  typo.json
notebooks/: llma2.ipynb  stacking_lgbm.ipynb  test.ipynb
src/: criterion.py  models.py  pipeline.py  send_dataset_to_kaggle.py  test.py  utils.py
