[tool.poetry]
name = "CommonLit2023"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
torch = { url = "https://download.pytorch.org/whl/cu102/torch-1.11.0%2Bcu102-cp310-cp310-linux_x86_64.whl"}
transformers = "^4.30.2"
sentencepiece = "^0.1.99"
protobuf = "3.19.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
pytest = "^7.3.2"
japanize-matplotlib = "^1.1.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
hydra-core = "^1.3.2"
mlflow = "^2.5.0"
omegaconf = "^2.3.0"
kaggle = "^1.5.16"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"