[tool.poetry]
name = "CommonLit2023"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "torch_cu118"}
transformers = "=4.30.2"
sentencepiece = "^0.1.99"
protobuf = "3.19.4"
iterative-stratification = "^0.1.7"
xformers = "^0.0.21"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
pytest = "^7.3.2"
japanize-matplotlib = "^1.1.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
hydra-core = "^1.3.2"
mlflow = "^2.5.0"
omegaconf = "^2.3.0"
kaggle = "^1.5.16"
pyspellchecker = "^0.7.2"
nltk = "^3.8.1"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"